# blue

./: .gitignore  Cargo.toml  README.md  build.rs  layout.ld
loader-stage1/: Cargo.toml  linker.ld
loader-stage1/src/: main.rs
loader-stage2/: Cargo.toml  i586-unknown-none-code16.json  linker.ld
loader-stage2/.cargo/: config.toml
loader-stage2/src/: a20.rs  gdt.rs  main.rs  paging.rs
loader-stage3/: Cargo.toml  linker.ld  x86_64-unknown-none.json
loader-stage3/src/: main.rs  realmode.rs
real/: Cargo.toml
real/src/: disk.rs  lib.rs  mbr.rs  trampoline.rs  video.rs
src/: main.rs
