[package]
name = "blue-real"
version = "0.1.0"
authors = ["Aaron Griffith <aargri@gmail.com"]
edition = "2018"

[profile.release]
opt-level = "z"

[dependencies]
bytemuck = { version = "1.8", default-features = false, features = ["derive"] }
byteorder = { version = "1", default-features = false }
aligned = "0.4"
paste = "1"
memoffset = { version = "0.6", features = ["unstable_const"]}
const-default = { version = "1", default-features = false }

[dependencies.fatfs]
git = "https://github.com/agrif/rust-fatfs"
branch = "extents"
default-features = false
features = ["lfn"]
